--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	],
 	"require": {
 		"php": "^8.0",
-		"baraja-core/structured-api": "^3.0"
+		"baraja-core/structured-api": "^3.0 >=3.3.2"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^1.0",
